Fix article header styling on mobile

--- a/src/scss/components/article.scss
+++ b/src/scss/components/article.scss
@@ -12,6 +12,9 @@ article {
     font-size: 2.6rem;
     margin-bottom: 1rem;
   }
+  h4.date {
+    margin-bottom: 1rem;
+  }
   h4 {
     margin-bottom: 0;
   }
